--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "modules/puppet-rbenv"]
-	path = modules/puppet-rbenv
+[submodule "modules/rbenv"]
+	path = modules/rbenv
 	url = git://github.com/alup/puppet-rbenv.git
