--- a/booby_trap/vagrantconfig.yml
+++ b/booby_trap/vagrantconfig.yml
@@ -3,9 +3,9 @@
 # Don't change this; use vagrantconfig_local.yml to override these
 # settings instead.
 
-name: "mri"
-#database: "postgres"
-database: "mysql"
+name: "booby_trap"
+database: "postgres"
+#database: "mysql"
 
 box_name: "precise64"
 box_url: "http://files.vagrantup.com/precise64.box"
@@ -18,11 +18,9 @@ host_development_dir: "~/development"
 guest_development_dir: "~/development"
 
 ports:
- - {guest: 3000, host: 3000} # rails default
- - {guest: 4567, host: 4567} # sinatra
- - {guest: 1234, host: 1234} # middleman, ruby-debug-ide
+  - {guest: 3000, host: 3000}
 
 timezone: "Europe/Ljubljana"
 
-mysql_user: "root"
-mysql_password: "root"
+mysql_user: "postgres"
+mysql_password: "postgres"
