--- a/booby_trap/vagrantconfig.yml
+++ b/booby_trap/vagrantconfig.yml
@@ -4,12 +4,13 @@
 # settings instead.
 
 name: "booby_trap"
-database: "postgres"
-#database: "mysql"
+
+ruby: "mri"
+ruby_version: "2.0.0-p0"
+database: "postgres" # or "mysql"
 
 box_name: "precise64"
 box_url: "http://files.vagrantup.com/precise64.box"
-ruby: "mri"
 
 memory: 512 # megabytes for VM
 guest_ip: "192.168.2.60"
@@ -21,6 +22,3 @@ ports:
   - {guest: 3000, host: 3000}
 
 timezone: "Europe/Ljubljana"
-
-mysql_user: "postgres"
-mysql_password: "postgres"
