--- a/mri/vagrantconfig.yml
+++ b/mri/vagrantconfig.yml
@@ -4,12 +4,13 @@
 # settings instead.
 
 name: "mri"
-#database: "postgres"
-database: "mysql"
+
+ruby: "mri"
+ruby_version: "2.0.0-p0"
+database: "postgres" # or "mysql"
 
 box_name: "precise64"
 box_url: "http://files.vagrantup.com/precise64.box"
-ruby: "mri"
 
 memory: 512 # megabytes for VM
 guest_ip: "192.168.2.60"
@@ -23,6 +24,3 @@ ports:
  - {guest: 1234, host: 1234} # middleman, ruby-debug-ide
 
 timezone: "Europe/Ljubljana"
-
-mysql_user: "root"
-mysql_password: "root"
