--- a/vagrantconfig.example.yml
+++ b/vagrantconfig.example.yml
@@ -1,10 +1,24 @@
 # Default config for Vagrant
 # use vagrantconfig_local.yml to override these settings and put it to .gitignore
-name: "project_name"
 
-ruby: "mri"
-ruby_version: "2.0.0-p0"
-database: "postgres" # or "mysql" or "sqlite3"
+# conf gets passed to puppet scripts
+conf:
+  ruby_version: "2.0.0-p195"
+  databases:
+    - "postgres"
+  # or
+    # - "mysql"
+  # or
+    # - "sqlite3"
+
+  packages:
+    - "vim"
+    - "git"
+    # - "imagemagick"
+    # - ...
+
+# All these are used inside Vagrantfile
+name: "project_name"
 
 box_name: "precise64"
 box_url: "http://files.vagrantup.com/precise64.box"
@@ -16,8 +30,8 @@ host_development_dir: "~/path_to_your/project_dir"
 guest_development_dir: "/home/vagrant/project_dir"
 
 ports:
- - {guest: 3000, host: 3000} # rails default
- - {guest: 4567, host: 4567} # sinatra
- - {guest: 1234, host: 1234} # middleman
+  - {guest: 3000, host: 3000} # rails default
+  - {guest: 4567, host: 4567} # sinatra
+  - {guest: 1234, host: 1234} # middleman
 
 timezone: "Europe/Ljubljana"
